--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body{
 header{
     width: 100%;
     height: 5rem;
-    padding: 0 11vw;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,8 +34,8 @@ header{
     z-index: 3;
     top: 0;
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 
 h1, h2, h3{
@@ -43,7 +43,7 @@ h1, h2, h3{
 }
 
 nav{
-    width: 100%;
+    width: 85rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,7 +83,7 @@ li figure{
 }
 
 .wrapper-menu-nav{
-    width: calc(100% - 11rem);
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +110,7 @@ li figure{
 }
 
 .childs{
-    width: 100%;
+    max-width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: space-between;
@@ -125,8 +125,10 @@ li figure{
 }
 
 #hero-section{
+    justify-content: center;
+    align-items: end;
     padding-bottom: 5rem;
-    background: var(--bg-hero);
+    background-image: var(--bg-hero);
     background-position: 50% 60%;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -134,8 +136,8 @@ li figure{
 }
 
 #hero-div-container{
-    width: 100%;
-    height: calc(100% - 5rem);
+    max-width: 92%;
+    height: 450px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -143,23 +145,23 @@ li figure{
 }
 
 h1{
-    max-width: 92%;
-    display: inline-block;
-    padding: 0 1rem;
+    
+    padding: 0 1em;
 
-    font-size: clamp(3.2rem, 4vw, 6rem);
+    font-size: clamp(3.6rem, 6vw, 6rem);
     font-weight: 700;
     color: var(--text-color);
 
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
-    border-radius: 0.8rem;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 8px;
 }
 
 .arrows{
-    width: 6rem;
-    height: 7.2rem;
+    width: 60px;
+    height: 72px;
+    /* margin-top: 30%; */
 }
 
 .arrows path{
@@ -218,10 +220,10 @@ h1{
     flex-direction: column;
     align-items: center;
     background: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     padding: 3rem;
-    border-radius: 1.2rem;
+    border-radius: 12px;
 }
 
 .flex{
@@ -274,7 +276,7 @@ h1{
     justify-content: center;
     align-items: center;
     padding: 1rem 0;
-    border-radius: 1.5rem;
+    border-radius: 15px;
     background-color: #D870D8;
     color: #fff;
     margin-top: 3.5rem;
@@ -310,10 +312,10 @@ h1{
     width: 100%;
     font-size: 1.7rem;
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     padding: 3rem 2.5rem;
-    border-radius: 1.2rem;
+    border-radius: 12px;
 }
 
 .main-container-projects{
@@ -333,9 +335,9 @@ h1{
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
-    border-radius: 1.2rem;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 12px;
     padding: 1.5rem 0;
 }
 
@@ -368,7 +370,7 @@ h1{
     row-gap: 1rem;
     aspect-ratio: 16/9;
     background-color: rgba(0,0,0,0.2);
-    border-radius: 1.2rem;
+    border-radius: 12px;
     position: absolute;
     opacity: 0;
     z-index: 0;
@@ -390,7 +392,7 @@ h1{
 
 .preview{
     width: 100%;
-    border-radius: 1.2rem;
+    border-radius: 12px;
 }
 
 .description-project{
@@ -398,7 +400,7 @@ h1{
     background-color: rgba(0,0,0,0.6);
     font-size: 1.4rem;
     padding: 1.5rem;
-    border-radius: 1.2rem;
+    border-radius: 12px;
 }
 
 .link-project{
@@ -425,9 +427,9 @@ h1{
     padding: 3rem;
     row-gap: 3rem;
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
-    border-radius: 1.2rem;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 12px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
@@ -458,13 +460,13 @@ form{
     width: 100%;
     max-width: 45rem;
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    border-radius: 0.8rem;
+    border-radius: 8px;
 }
 
 form > h3{
@@ -480,7 +482,7 @@ form > h3{
 input, label{
     width: 100%;
     border: none;
-    border-radius: 0.8rem;
+    border-radius: 8px;
 }
 
 input{
@@ -501,7 +503,7 @@ textarea{
     width: 100%;
     height: 10rem;
     padding: 0.5rem;
-    border-radius: 0.8rem;
+    border-radius: 8px;
 }
 
 .input-error{
@@ -514,7 +516,7 @@ textarea{
     width: 25rem;
     height: 6rem;
     border: none;
-    border-radius: 0.8rem;
+    border-radius: 8px;
     background-color: #D870D8;
     cursor: pointer;
 }
@@ -530,8 +532,8 @@ footer{
     width: 100%;
     height: 100%;
     background-color: var(--shadow-text);
-    backdrop-filter: blur(0.5rem);
-    -webkit-backdrop-filter: blur(0.5rem);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -581,10 +583,6 @@ footer{
         width: 100%;
     }
 
-    .social-header-links{
-        display: none;
-    }
-
     .profile-container{
         gap: 3rem;
     }
@@ -622,6 +620,12 @@ footer{
 
     .description-project{
         width: 100%;
+    }
+}
+
+@media(max-width: 750px){
+        .social-header-links{
+        display: none;
     }
 }
 
