--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,17 @@ body{
     font-size: 1.6rem;
 }
 
+.main-container, .nav-container{
+    max-width: 110rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 header{
     width: 100%;
     height: 5rem;
-    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,10 +49,15 @@ h1, h2, h3{
     text-align: center;
 }
 
-nav{
-    width: 85rem;
+h2{
+    margin-bottom: 1.5rem;
+}
+
+.nav-container{
+    max-width: 110rem;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -74,12 +86,29 @@ li figure{
     display: flex;
     justify-content: center;
     align-items: center;
-    column-gap: 0.5rem;
+    column-gap: 1rem;
+}
+
+.menu-mobile{
+    width: 100%;
+    background-color: rgba(0,0,0, 0.97);
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    display: none;
+}
+
+.menu-nav-mobile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 6.5rem 0 2rem;
+    gap: 1rem;
 }
 
 #menu-icon{
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
 }
 
 .wrapper-menu-nav{
@@ -113,15 +142,15 @@ li figure{
     max-width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 6.5rem 5vw 2rem; 
 }
 
 .sections{  
-    background: #403A3E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #403A3E; 
+    background: linear-gradient(to right, #BE5869, #403A3E);
+    background: -webkit-linear-gradient(to right, #BE5869, #403A3E); 
 }
 
 #hero-section{
@@ -137,7 +166,7 @@ li figure{
 
 #hero-div-container{
     max-width: 92%;
-    height: 450px;
+    height: 32em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -145,7 +174,6 @@ li figure{
 }
 
 h1{
-    
     padding: 0 1em;
 
     font-size: clamp(3.6rem, 6vw, 6rem);
@@ -215,6 +243,7 @@ h1{
 }
 
 .profile-card{
+    max-width: 45rem;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -309,6 +338,7 @@ h1{
 }
 
 .profile-sinopse{
+    max-width: 45rem;
     width: 100%;
     font-size: 1.7rem;
     background-color: var(--shadow-text);
@@ -362,7 +392,7 @@ h1{
 
 .project{
     width: 100%;
-    height: 100%;
+    height: 90%;
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
@@ -375,6 +405,7 @@ h1{
     opacity: 0;
     z-index: 0;
     transition: opacity 1s ease;
+    transition: all 1s;
 }
 
 .active{
@@ -423,7 +454,7 @@ h1{
 }
 
 #view-container-technologies{
-    width: 100%;
+    width: 92%;
     padding: 3rem;
     row-gap: 3rem;
     background-color: var(--shadow-text);
@@ -457,7 +488,7 @@ h1{
 }
 
 form{
-    width: 100%;
+    width: 92%;
     max-width: 45rem;
     background-color: var(--shadow-text);
     backdrop-filter: blur(5px);
@@ -546,7 +577,7 @@ footer{
 }
 
 @media(max-width: 1200px){
-    #about-me-section, #projects-section, #technologies-section, #contact-section{
+    .main-container{
         flex-direction: column;
         justify-content: center;
         gap: 8rem;
@@ -575,14 +606,6 @@ footer{
 }
 
 @media(max-width: 1000px){
-    header{
-        padding: 0;
-    }
-
-    .wrapper-menu-nav{
-        width: 100%;
-    }
-
     .profile-container{
         gap: 3rem;
     }
@@ -596,16 +619,22 @@ footer{
     }
 }
 
-@media(max-width: 900px){
+@media(max-width: 880px){
     .childs{
         padding-right: 0;
         padding-left: 0;
     }
 
     .view-projects{
+        background-color: transparent;
         flex-direction: column;
         gap: 2rem;
-        padding: 2rem 4rem;
+        padding: 2rem 0;
+        max-height: 68rem;
+    }
+
+    .projects-container{
+        width: 100%;
     }
 
     .view-projects > svg{
@@ -623,11 +652,11 @@ footer{
     }
 }
 
-@media(max-width: 750px){
-        .social-header-links{
+@media(max-width: 720px){
+    .social-header-links{
         display: none;
     }
-}
+} 
 
 @media(max-width: 550px){
     #hero-section{
@@ -645,10 +674,16 @@ footer{
     }
 
     .view-projects{
-        padding: 2rem 1.5rem;
+        max-height: 52rem;
     }
 
     #view-container-technologies{
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 350px){
+    #hero-div-container{
+        height: 23em;
     }
 }
