--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,11 @@ li figure{
     gap: 1rem;
 }
 
+.nav-mobile{
+    width: 50%;
+    margin: 0 auto;
+}
+
 #menu-icon{
     width: 3rem;
     height: 3rem;
@@ -140,7 +145,7 @@ li figure{
 
 .childs{
     max-width: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,7 +171,7 @@ li figure{
 
 #hero-div-container{
     max-width: 92%;
-    height: 32em;
+    height: 28em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -174,7 +179,7 @@ li figure{
 }
 
 h1{
-    padding: 0 1em;
+    padding: 0 0.5em;
 
     font-size: clamp(3.6rem, 6vw, 6rem);
     font-weight: 700;
@@ -360,7 +365,7 @@ h1{
 .view-projects{
     width: 100%;
     max-height: 55rem;
-    height: 100vh;
+    height: 200dvh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -368,7 +373,7 @@ h1{
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border-radius: 12px;
-    padding: 1.5rem 0;
+    padding: 2.5rem 0;
 }
 
 .wrapper-arrows-responsive{
@@ -384,7 +389,6 @@ h1{
     width: 85%;
     height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     transition: 0.5s;
     position: relative;
@@ -392,20 +396,19 @@ h1{
 
 .project{
     width: 100%;
-    height: 90%;
-    padding: 1rem 2rem;
+    height: 100%;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     row-gap: 1rem;
-    aspect-ratio: 16/9;
     background-color: rgba(0,0,0,0.2);
     border-radius: 12px;
     position: absolute;
     opacity: 0;
     z-index: 0;
-    transition: opacity 1s ease;
-    transition: all 1s;
+    transition: all 1s ease;
 }
 
 .active{
@@ -417,17 +420,16 @@ h1{
     transform: scale(1.05);
 }
 
-.project-image-container{
-    width: 100%;
-}
-
 .preview{
     width: 100%;
+    max-height: 28.5rem;
+    object-fit: cover;
+    object-position: 50% 0%;
     border-radius: 12px;
 }
 
 .description-project{
-    width: 80%;
+    width: 95%;
     background-color: rgba(0,0,0,0.6);
     font-size: 1.4rem;
     padding: 1.5rem;
@@ -436,7 +438,6 @@ h1{
 
 .link-project{
     font-size: 1.2rem; 
-    margin-bottom: 1rem;
 }
 
 .back-arrow, .forward-arrow{
@@ -454,7 +455,7 @@ h1{
 }
 
 #view-container-technologies{
-    width: 92%;
+    width: 100%;
     padding: 3rem;
     row-gap: 3rem;
     background-color: var(--shadow-text);
@@ -623,6 +624,10 @@ footer{
     .childs{
         padding-right: 0;
         padding-left: 0;
+    }
+
+    #view-container-technologies{
+        width: 92%;
     }
 
     .view-projects{
